# agent-skills

./: README.md
cli-creator/: SKILL.md
cli-creator/evals/: evals.json
cli-creator/examples/node-search-cli/: build-calls.test.ts  build-calls.ts  errors.ts  output.ts
cli-creator/examples/python-crud-cli/: build_calls.py  errors.py  output.py  test_build_calls.py
cli-creator/references/: auth-patterns.md  error-handling.md  go-cobra.md  node-commander.md  output-formatting.md  python-click-typer.md  rust-clap.md  testing-strategies.md
code-clip/: SKILL.md
code-clip/cli/: .gitignore  pyproject.toml
code-clip/cli/code_clip/: build_calls.py  errors.py  main.py  output.py  storage.py
code-clip/cli/tests/: test_build_calls.py  test_storage.py
code-clip/evals/: evals.json
code-clip/examples/: workflow-example.md
pr-message/: SKILL.md
pr-message/evals/: evals.json
pr-message/examples/: sample-pr-message.md
