[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code-clip"
version = "0.1.0"
description = "Multi-clipboard CLI for code snippets — optimized for coding agents"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
]

[project.scripts]
code-clip = "code_clip.main:app"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
